--- a/package.json
+++ b/package.json
@@ -1,15 +1,15 @@
 {
   "name": "webp-converter-lib",
-  "version": "1.0.0",
-  "main": "dist/lib.js",
-  "module": "dist/lib.js",
-  "types": "dist/lib.d.ts",
+  "version": "1.0.2",
+  "description": "A library for converting images to WebP using WASM",
+  "main": "dist/index.js",
+  "types": "dist/index.d.ts",
+  "module": "dist/index.js",
   "scripts": {
     "build": "node esbuild.config.js"
   },
   "files": [
-    "dist",
-    "src/webp_converter.wasm"
+    "dist"
   ],
   "dependencies": {},
   "keywords": ["webp-converter-lib"],
