--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,13 +1,17 @@
 {
     "compilerOptions": {
-      "target": "ES2015",
+      "target": "ES6",
       "module": "ESNext",
-      "outDir": "./dist",
+      "moduleResolution": "node",
+      "outDir": "dist",
+      "rootDir": "src",
       "strict": true,
       "esModuleInterop": true,
       "skipLibCheck": true,
       "forceConsistentCasingInFileNames": true,
-      "declaration": true
+      "declaration": true,
+      "sourceMap": true
     },
-    "include": ["src"]
-}
+    "include": ["src/**/*.ts"]
+  }
+  
