--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "webp-converter-lib",
-  "version": "1.0.2",
+  "version": "1.0.6",
   "description": "A library for converting images to WebP using WASM",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
@@ -11,13 +11,15 @@
   "files": [
     "dist"
   ],
-  "dependencies": {},
-  "keywords": ["webp-converter-lib"],
+  "keywords": [
+    "webp-converter-lib"
+  ],
   "author": "",
   "license": "ISC",
   "devDependencies": {
     "@types/node": "^20.14.8",
     "esbuild": "^0.21.5",
+    "esbuild-plugin-wasm": "^1.1.0",
     "typescript": "^5.5.2"
   }
 }
