--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,6 +14,6 @@
       "webp_converter": ["src/webp_converter.js"]
     }
   },
-  "include": ["src/**/*.ts"],
+  "include": ["src/**/*.ts", "src/**/*.d.ts"],
   "exclude": ["node_modules"]
 }
